eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/IBB_Product_Suitability__c.object
<CustomObject>
    <fields>
        <fullName>Access_to_Funds__c</fullName>
        <label>What access do you require?</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instant Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawal with Notice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_CCJ_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow CCJ/Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Non_UK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Non-UK Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buy_to_Let_rental_amount__c</fullName>
        <label>Buy to Let rental amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category_of_Product__c</fullName>
        <formula>TEXT( IBB_Product__r.Category_of_Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category of Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Existing customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Only</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_many_incomes_can_be_used__c</fullName>
        <label>How many incomes can be used</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IBB_Product_Name__c</fullName>
        <formula>IBB_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IBB Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBB_Product__c</fullName>
        <label>IBB Product</label>
        <referenceTo>IBB_Product__c</referenceTo>
        <relationshipName>IBB_Product_Suitability</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Income_Multiplier__c</fullName>
        <label>Income Multiplier</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lending_area__c</fullName>
        <label>Lending area</label>
        <picklist>
            <picklistValues>
                <fullName>England &amp; Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Limited_company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limited Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Finance_Income_Multiplier__c</fullName>
        <formula>IF(Income_Multiplier__c&gt;0, Maximum_finance_amounts__c /  Income_Multiplier__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Finance / Income Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_BTL_Properties__c</fullName>
        <label>Maximum BTL Properties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_FTV__c</fullName>
        <label>Maximum FTV%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Maximum_Finance_Term_Years__c</fullName>
        <label>Maximum Finance Term (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_age__c</fullName>
        <label>Maximum age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_deposit_amount__c</fullName>
        <label>Maximum deposit amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_finance_amounts__c</fullName>
        <label>Maximum finance amounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_withdrawl_amount__c</fullName>
        <label>Maximum withdrawl amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Finance_Term_Years__c</fullName>
        <label>Minimum Finance Term (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Purchase_Price__c</fullName>
        <label>Minimum Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_age__c</fullName>
        <label>Minimum age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_deposit_amount__c</fullName>
        <label>Minimum deposit amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_finance_amounts__c</fullName>
        <label>Minimum finance amounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_withdrawl_amount__c</fullName>
        <label>Minimum withdrawl amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_applicants__c</fullName>
        <label>Number of applicants</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_withdrawls_allowed__c</fullName>
        <label>Number of withdrawls allowed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Account__c</fullName>
        <description>Field to use in Product Select screen</description>
        <label>Purpose of Account</label>
        <picklist>
            <picklistValues>
                <fullName>Pay everyday bills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receive benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Occasion Savings/Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Savings/Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College/Student Savings/Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Require_property_to_be_main_residence__c</fullName>
        <label>Require property to be main residence?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_On_BAA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On BAA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_On_Liabilities_External__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Liabilities External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_On_Liabilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Liabilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suitable_Employment_Types__c</fullName>
        <label>Suitable Employment Types</label>
        <picklist>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homemaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed non-professional</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Suitable_Property_Types__c</fullName>
        <label>Suitable Property Types</label>
        <picklist>
            <picklistValues>
                <fullName>Council property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex- council property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privately Owned.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat (not retirement flat)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Finance__c</fullName>
        <label>Type of Finance</label>
        <picklist>
            <picklistValues>
                <fullName>Re-finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release additional capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On shore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off shore</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Product__c</fullName>
        <formula>TEXT(IBB_Product__r.Type_of_Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type of Product</label>
        <type>Text</type>
    </fields>
    <label>Product Suitability</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IBB_Product__c</columns>
        <columns>Number_of_applicants__c</columns>
        <columns>Show_On_Liabilities__c</columns>
        <columns>Show_On_Liabilities_External__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IBB_Product_Suitability__c.Suitability_Liab</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Suitability</pluralLabel>
    <recordTypes>
        <fullName>Asset_Suitability</fullName>
        <active>true</active>
        <description>Suitability for assets</description>
        <label>Asset Suitability</label>
    </recordTypes>
    <recordTypes>
        <fullName>Suitability_Liab</fullName>
        <active>true</active>
        <description>For use with liability products</description>
        <label>Suitability Liab</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>